--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<html>
+  <head>
+    <title>Yonghao Zhang's HW1</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    <link rel="stylesheet" href="phone.css">
+  </head>
+  <body>
+    hahaha! welcome to my website!!!
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="phone.js"></script>
+  </body>
+  <form class= "pure-form pure-form-stacked">
+    <label for= "name">Name</label>
+    <input id= "name" placeholder="Jane Smith">
+  </form>
+</html>
 
+<div class="className" id="idName"></div>
+<button class="className" id="idName">Button label</button>
+<input class="className" id="idName"/>
